css and html added

--- a/index.html
+++ b/index.html
@@ -1,1 +1,56 @@
-Hello world!
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Your Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#about-me">About Me</a></li>
+                <li><a href="#researches">Researches</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section id="about-me">
+            <div class="center">
+                <img src="your_picture.jpg" alt="Your Picture">
+                <div class="details">
+                    <h2>Your Name</h2>
+                    <p>Location / Profession</p>
+                    <p>About Me: A brief introduction about yourself.</p>
+                </div>
+            </div>
+        </section>
+
+        <section id="researches">
+            <h2>Recent Researches</h2>
+            <div class="papers">
+                <!-- Add your paper elements here -->
+                <div class="paper">
+                    <h3>Research Paper Title 1</h3>
+                    <p>Summary of your research paper.</p>
+                </div>
+                <div class="paper">
+                    <h3>Research Paper Title 2</h3>
+                    <p>Summary of your research paper.</p>
+                </div>
+                <!-- Add more paper elements as needed -->
+            </div>
+        </section>
+
+        <section id="contact">
+            <h2>Contact</h2>
+            <!-- Add your contact form or contact information here -->
+        </section>
+    </main>
+
+    <footer>
+        <!-- Add your footer content here -->
+    </footer>
+</body>
+</html>
