--- a/index.html
+++ b/index.html
@@ -1,56 +1,64 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Your Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Your Name - Portfolio</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="#about-me">About Me</a></li>
-                <li><a href="#researches">Researches</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+  <header>
+    <nav>
+      <div class="container">
+        <h1>Your Name</h1>
+        <ul>
+          <li><a href="#about">About</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
+  </header>
 
-    <main>
-        <section id="about-me">
-            <div class="center">
-                <img src="your_picture.jpg" alt="Your Picture">
-                <div class="details">
-                    <h2>Your Name</h2>
-                    <p>Location / Profession</p>
-                    <p>About Me: A brief introduction about yourself.</p>
-                </div>
-            </div>
-        </section>
+  <section id="hero">
+    <div class="container">
+      <h2>Hello, I'm Your Name</h2>
+      <p>Welcome to my portfolio website</p>
+    </div>
+  </section>
 
-        <section id="researches">
-            <h2>Recent Researches</h2>
-            <div class="papers">
-                <!-- Add your paper elements here -->
-                <div class="paper">
-                    <h3>Research Paper Title 1</h3>
-                    <p>Summary of your research paper.</p>
-                </div>
-                <div class="paper">
-                    <h3>Research Paper Title 2</h3>
-                    <p>Summary of your research paper.</p>
-                </div>
-                <!-- Add more paper elements as needed -->
-            </div>
-        </section>
+  <section id="about">
+    <div class="container">
+      <h2>About Me</h2>
+      <p>Add a brief description about yourself and your skills here.</p>
+    </div>
+  </section>
 
-        <section id="contact">
-            <h2>Contact</h2>
-            <!-- Add your contact form or contact information here -->
-        </section>
-    </main>
+  <section id="projects">
+    <div class="container">
+      <h2>Projects</h2>
+      <div class="project">
+        <img src="project1.jpg" alt="Project 1">
+        <h3>Project 1</h3>
+        <p>Add a description of your project here.</p>
+      </div>
+      <!-- Add more projects here -->
+    </div>
+  </section>
 
-    <footer>
-        <!-- Add your footer content here -->
-    </footer>
+  <section id="contact">
+    <div class="container">
+      <h2>Contact</h2>
+      <p>Add your contact information and a contact form here.</p>
+    </div>
+  </section>
+
+  <footer>
+    <div class="container">
+      <p>&copy; 2023 Your Name. All rights reserved.</p>
+    </div>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
